# brozzler

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  README.rst  cluster-control.sh  dependabot.yml  hq-notes.txt  job-conf.rst  pyproject.toml  pytest.ini  readme.rst  renovate.json  requirements-ait.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: daily.yaml  dependabot.yml  lint_python.yml  publish-artifacts.yml  python-formatting.yml  release.yml  renovate.yml  tests.yml
.github/workflows/setup/: action.yml
ansible/: hosts-localhost  hosts-vagrant  playbook.yml
ansible/roles/brozzler-dashboard/handlers/: main.yml
ansible/roles/brozzler-dashboard/meta/: main.yml
ansible/roles/brozzler-dashboard/tasks/: main.yml
ansible/roles/brozzler-dashboard/templates/: brozzler-dashboard-run.j2  brozzler-dashboard.conf.j2
ansible/roles/brozzler-webconsole/handlers/: main.yml
ansible/roles/brozzler-webconsole/tasks/: main.yml
ansible/roles/brozzler-webconsole/templates/: brozzler-webconsole.conf.j2
ansible/roles/brozzler-worker/handlers/: main.yml
ansible/roles/brozzler-worker/tasks/: main.yml
ansible/roles/brozzler-worker/templates/: Xvnc-run.j2  Xvnc.conf.j2  brozzler-worker-run.j2  brozzler-worker.conf.j2  vnc-websock-run.j2  vnc-websock.conf.j2
ansible/roles/common/defaults/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/pywb/handlers/: main.yml
ansible/roles/pywb/tasks/: main.yml
ansible/roles/pywb/templates/: pywb-run.j2  pywb.conf.j2  pywb.yml.j2
ansible/roles/rethinkdb/handlers/: main.yml
ansible/roles/rethinkdb/tasks/: main.yml
ansible/roles/rethinkdb/templates/: rethinkdb-brozzler.conf.j2
ansible/roles/warcprox/defaults/: main.yml
ansible/roles/warcprox/handlers/: main.yml
ansible/roles/warcprox/tasks/: main.yml
ansible/roles/warcprox/templates/: run.j2  warcprox.conf.j2
brozzler/: __init__.py  behaviors.py  behaviors.yaml  browser.py  chrome.py  cli.py  db.py  easy.py  frontier.py  hq.py  job.py  job_schema.yaml  job_schema.yml  login-behaviors.yaml  metrics.py  model.py  pywb.py  robots.py  site.py  ssl.py  url.py  video_data.py  worker.py  ydl.py
brozzler/behaviors.d/: clickGetPDFs.js.template  default.js  facebook.js  facebook.js.template  fec_gov.js  flickr.js  huffpostslides.js  instagram.js  marquette_edu.js  multiclicks.js.template  noguchi.js.template  psu24.js  simpleclicks.js.in  simpleclicks.js.template  simpledo.js.template  vimeo.js
brozzler/dashboard/: __init__.py
brozzler/dashboard/static/js/: app.js
brozzler/dashboard/templates/: index.html
brozzler/js-templates/: classUmbraBehavior.js.j2  clickGetPDFs.js.j2  default.js  extract-outlinks.js  extract-tertiary-assets.js  facebook.js  facebook.js.j2  fec_gov.js  huffpostslides.js  instagram.js  login-page.js.j2  marquette_edu.js  mouseovers.js.j2  noguchi.js.j2  noguchi.js.template  pitchfork.js  pm-ca.js  psu24.js  simpleclicks.js.j2  simpledo.js.j2  stealth.js  try-login.js.j2  umbraBehavior.js  umbraBehavior.js.j2  umbraBehavior18q4.js.j2
brozzler/webconsole/: __init__.py
brozzler/webconsole/static/js/: app.js
brozzler/webconsole/static/partials/: home.html  site.html  workers.html
brozzler/webconsole/templates/: index.html
dev/: Dockerfile-brozzler-worker  Dockerfile-warcprox  README.md  brozzler-worker-entrypoint.sh  docker-compose.yml  pre-commit  run-brozzler-worker.sh
docker/: Dockerfile  vlc-screencast.sh  vnc-websock.sh  vncserver.sh
no-docker/: README.rst  vnc-websock.sh  vncserver.sh
scripts/: ytdlp_test.py
tests/: test_brozzling.py  test_cli.py  test_cluster.py  test_frontier.py  test_units.py
tests/htdocs/: file1.txt  robots.txt
tests/htdocs/site10/: index.html  small.m3u8  small0.ts  small1.ts  small2.ts  small3.ts  small4.ts  small5.ts
tests/htdocs/site11/: form-no-login.html  form1.html  form2.html
tests/htdocs/site12/: with_request.html
tests/htdocs/site2/: login.html
tests/htdocs/site3/: page.html
tests/htdocs/site4/: alert.html  confirm.html  print.html  prompt.html
tests/htdocs/site5/destination/: index.html  page2.html
tests/htdocs/site6/: 1880000  index.html  readme-mpd.md  small-audio.webm  small-video_140x80_25k.webm  small-video_280x160_100k.webm  small.mpd
tests/htdocs/site7/: boosh.txt  foo.html  index.html  whee.txt
tests/htdocs/site8/: index.html
tests/htdocs/site9/: destination.html  index.html
umbra/: __init__.py  behaviors.json  behaviors.py  behaviors.yaml  browser.py  controller.py  frontier.py  hq.py  umbra.py  url.py
umbra/behaviors.d/: default.js  facebook.js  flickr.js  instagram.js  marquette_edu.js  psu.js  psu24.js  simpleclicks.js.in  vimeo.js
vagrant/: README.rst  Vagrantfile  run-tests.sh  vagrant-brozzler-new-job.py  vagrant-brozzler-new-site.py  vagrant-brozzler-new-site.sh
vagrant/ansible/: hosts  playbook.yml
vagrant/ansible/roles/brozzler-webconsole/tasks/: main.yml
vagrant/ansible/roles/brozzler-webconsole/templates/: brozzler-webconsole.conf.j2
vagrant/ansible/roles/brozzler-worker/tasks/: main.yml
vagrant/ansible/roles/brozzler-worker/templates/: Xvnc.conf.j2  brozzler-worker.conf.j2  vnc-websock.conf.j2
vagrant/ansible/roles/common/tasks/: main.yml
vagrant/ansible/roles/pywb/handlers/: main.yml
vagrant/ansible/roles/pywb/tasks/: main.yml
vagrant/ansible/roles/pywb/templates/: pywb.conf.j2  pywb.yml.j2
vagrant/ansible/roles/rethinkdb/tasks/: main.yml
vagrant/ansible/roles/rethinkdb/templates/: rethinkdb-brozzler-easy.conf.j2
vagrant/ansible/roles/warcprox/handlers/: main.yml
webconsole/: README.rst  brozzler-webconsole.py  requirements.txt
webconsole/brozzler-webconsole/: __init__.py
webconsole/brozzler-webconsole/static/js/: app.js
webconsole/brozzler-webconsole/static/partials/: job.html  site.html
webconsole/static/: controllers.js  index.html
webconsole/static/js/: app.js  controllers.js
webconsole/static/partials/: home.html  job.html  jobs.html  site.html  workers.html
webconsole/templates/: jobs.html  layout.html
(+2 files in other folders)
